src/test/run-pass/union/union-inherent-method.rs
// Copyright 2016 The Rust Project Developers. See the COPYRIGHT
// file at the top-level directory of this distribution and at
// http://rust-lang.org/COPYRIGHT.
//
// Licensed under the Apache License, Version 2.0 <LICENSE-APACHE or
// http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
// <LICENSE-MIT or http://opensource.org/licenses/MIT>, at your
// option. This file may not be copied, modified, or distributed
// except according to those terms.

#![feature(untagged_unions)]

union U {
    a: u8,
}

impl U {
    fn method(&self) -> u8 { unsafe { self.a } }
}

fn main() {
    let u = U { a: 10 };
    assert_eq!(u.method(), 10);
}
